@@ -1,3 +1,11 @@
+2008-09-25 Jens Tkotz <jens@peino.de> 1.5.10-svn-b3
+
+ * Fix: Added param for brackets for slideshow link on mainpage.
+
+   Thanks to Rollcage from forum.
+
+ * Change: A few icons.
+
 2008-09-23 Jens Tkotz <jens@peino.de> 1.5.10-svn-b2
 
  * Enancement: Added more cancel/done button in the user management.
